// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TOCEntry is rendered 1`] = `
<div
  className="mapTocEntry"
  data-layerid="1"
  id="1"
>
  <EuiFlexGroup
    alignItems="center"
    className="mapTocEntry-visible"
    component="div"
    direction="row"
    gutterSize="none"
    justifyContent="flexStart"
    responsive={false}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <LayerTocActions
        displayName="layer 1"
        fitToBounds={[Function]}
        layer={
          Object {
            "getDisplayName": [Function],
            "getId": [Function],
            "getTOCDetails": [Function],
            "hasErrors": [Function],
            "isVisible": [Function],
            "showAtZoomLevel": [Function],
          }
        }
        toggleVisible={[Function]}
        zoom={0}
      />
    </EuiFlexItem>
    <EuiFlexItem
      component="div"
      grow={true}
    >
      <EuiLink
        color="text"
        data-test-subj="mapOpenLayerButtonlayer_1"
        onClick={[Function]}
        type="button"
      >
        <div
          className="eui-textTruncate eui-textLeft"
          style={
            Object {
              "width": 180,
            }
          }
        >
          layer 1
        </div>
      </EuiLink>
    </EuiFlexItem>
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <span
        className="mapTocEntry__grab"
      >
        <EuiIcon
          type="grab"
        />
      </span>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiFlexItem
    component="div"
    grow={true}
  >
    <EuiSpacer
      size="s"
    />
    <div>
      TOC details mock
    </div>
  </EuiFlexItem>
</div>
`;

exports[`TOCEntry props isReadOnly 1`] = `
<div
  className="mapTocEntry"
  data-layerid="1"
  id="1"
>
  <EuiFlexGroup
    alignItems="center"
    className="mapTocEntry-visible"
    component="div"
    direction="row"
    gutterSize="none"
    justifyContent="flexStart"
    responsive={false}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <LayerTocActions
        displayName="layer 1"
        fitToBounds={[Function]}
        layer={
          Object {
            "getDisplayName": [Function],
            "getId": [Function],
            "getTOCDetails": [Function],
            "hasErrors": [Function],
            "isVisible": [Function],
            "showAtZoomLevel": [Function],
          }
        }
        toggleVisible={[Function]}
        zoom={0}
      />
    </EuiFlexItem>
    <EuiFlexItem
      component="div"
      grow={true}
    >
      <EuiText
        grow={true}
        size="m"
      >
        <div
          className="eui-textTruncate eui-textLeft"
          style={
            Object {
              "width": 180,
            }
          }
        >
          layer 1
        </div>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiFlexItem
    component="div"
    grow={true}
  >
    <EuiSpacer
      size="s"
    />
    <div>
      TOC details mock
    </div>
  </EuiFlexItem>
</div>
`;
